--- a/tpms-ios/zh-Hant.lproj/Localizable.strings
+++ b/tpms-ios/zh-Hant.lproj/Localizable.strings
@@ -45,8 +45,8 @@
 
 "alert_message_usb_host_unavailable" = "您的手機不支持USB HOST，請更換其他手機再試";
 "alert_message_usb_io_error" = "主機連接錯誤";
-"alert_message_learn" = "胎壓學習搜索中%1$s";
-"alert_message_exchange" = "是否交換%1$s和%2$s";
+"alert_message_learn" = "胎壓學習搜索中%d";
+"alert_message_exchange" = "是否交換%@和%@";
 
 "alert_message_tire1_pressure_high" = "左前輪胎壓過高";
 "alert_message_tire2_pressure_high" = "左後輪胎壓過高";
