--- a/tpms-ios/zh-Hans.lproj/Localizable.strings
+++ b/tpms-ios/zh-Hans.lproj/Localizable.strings
@@ -42,6 +42,8 @@
 "theme_star" = "星空";
 "theme_modern" = "科技";
 "label_voice" = "声音";
+"label_leaking" = "漏气";
+"label_no_signal" = "无信号";
 
 "alert_message_usb_host_unavailable" = "您的手机不支持USB HOST，请更换其他手机再试";
 "alert_message_usb_io_error" = "主机连接错误";
@@ -60,6 +62,10 @@
 "alert_message_tire2_pressure_error" = "左后轮传感器失效";
 "alert_message_tire3_pressure_error" = "右前轮传感器失效";
 "alert_message_tire4_pressure_error" = "右后轮传感器失效";
+"alert_message_tire1_leaking" = "左前轮漏气";
+"alert_message_tire2_leaking" = "左后轮漏气";
+"alert_message_tire3_leaking" = "右前轮漏气";
+"alert_message_tire4_leaking" = "右后轮漏气";
 "alert_message_tire1_temp_high" = "左前轮温度过高";
 "alert_message_tire2_temp_high" = "左后轮温度过高";
 "alert_message_tire3_temp_high" = "右前轮温度过高";
